Add remove behavior Select method

--- a/Assets/Scripts/SoundEditor.asmdef
+++ b/Assets/Scripts/SoundEditor.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:429c94aa84b803e4ba03b4db82201d40"
+        "GUID:429c94aa84b803e4ba03b4db82201d40",
+        "GUID:478a2357cc57436488a56e564b08d223"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
